<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/location"
        android:defaultValue="@string/pref_location_default" />

    <ListPreference
        android:key="@string/pref_units_key"
        android:title="@string/title_temperature_units"
        android:dialogTitle="@string/title_temperature_units"
        android:entries="@array/pref_temperature_units_entries"
        android:entryValues="@array/pref_temperature_units_values"
        android:defaultValue="@string/pref_temperature_units_default" />

</PreferenceScreen>
